lib/src/g/core.g.dart


@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Short>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i16_1(
  Mat m,
  int i,
  ffi.Pointer<ffi.Pointer<ffi.Short>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Short>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i16_2(
  Mat m,
  int i,
  int j,
  ffi.Pointer<ffi.Pointer<ffi.Short>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Short>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i16_3(
  Mat m,
  int i,
  int j,
  int k,
  ffi.Pointer<ffi.Pointer<ffi.Short>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Int>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i32_1(
  Mat m,
  int i,
  ffi.Pointer<ffi.Pointer<ffi.Int>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Int>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i32_2(
  Mat m,
  int i,
  int j,
  ffi.Pointer<ffi.Pointer<ffi.Int>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Int>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i32_3(
  Mat m,
  int i,
  int j,
  int k,
  ffi.Pointer<ffi.Pointer<ffi.Int>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i8_1(
  Mat m,
  int i,
  ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i8_2(
  Mat m,
  int i,
  int j,
  ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_i8_3(
  Mat m,
  int i,
  int j,
  int k,
  ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Pointer<ffi.Pointer<imp1.ushort>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_u16_1(
  Mat m,
  int i,
  ffi.Pointer<ffi.Pointer<imp1.ushort>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<imp1.ushort>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_u16_2(
  Mat m,
  int i,
  int j,
  ffi.Pointer<ffi.Pointer<imp1.ushort>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
        ffi.Pointer<ffi.Pointer<imp1.ushort>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_u16_3(
  Mat m,
  int i,
  int j,
  int k,
  ffi.Pointer<ffi.Pointer<imp1.ushort>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Pointer<ffi.Pointer<imp1.uchar>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_u8_1(
  Mat m,
  int i,
  ffi.Pointer<ffi.Pointer<imp1.uchar>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<imp1.uchar>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_u8_2(
  Mat m,
  int i,
  int j,
  ffi.Pointer<ffi.Pointer<imp1.uchar>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<imp1.uchar>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_u8_3(
  Mat m,
  int i,
  int j,
  int k,
  ffi.Pointer<ffi.Pointer<imp1.uchar>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Reduce(
  Mat src,
  Mat dst,
  int dim,
  int rType,
  int dType,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Bool)>()
external ffi.Pointer<CvStatus> Mat_ReduceArgMax(
  Mat src,
  Mat dst,
  int axis,
  bool lastIndex,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Bool)>()
external ffi.Pointer<CvStatus> Mat_ReduceArgMin(
  Mat src,
  Mat dst,
  int axis,
  bool lastIndex,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Rect, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_Region(
  Mat m,
  Rect r,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Rect, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_Region_Async(
  Mat self,
  Rect r,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_Release(
  ffi.Pointer<Mat> m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Mat)>()
external ffi.Pointer<CvStatus> Mat_Repeat(
  Mat src,
  int nY,
  int nX,
  Mat dst,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_Reshape(
  Mat m,
  int cn,
  int rows,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, VecI32, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_ReshapeByVec(
  Mat m,
  int cn,
  VecI32 newshape,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_Reshape_Async(
  Mat self,
  int cn,
  int rows,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_Row(
  Mat m,
  int y,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_Rows(
  Mat m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Double, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_ScaleAdd(
  Mat src1,
  double alpha,
  Mat src2,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Double)>()
external ffi.Pointer<CvStatus> Mat_SetDouble(
  Mat m,
  int row,
  int col,
  double val,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Double)>()
external ffi.Pointer<CvStatus> Mat_SetDouble3(
  Mat m,
  int x,
  int y,
  int z,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Float)>()
external ffi.Pointer<CvStatus> Mat_SetFloat(
  Mat m,
  int row,
  int col,
  double val,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Float)>()
external ffi.Pointer<CvStatus> Mat_SetFloat3(
  Mat m,
  int x,
  int y,
  int z,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Double)>()
external ffi.Pointer<CvStatus> Mat_SetIdentity(
  Mat src,
  double scalar,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int32)>()
external ffi.Pointer<CvStatus> Mat_SetInt(
  Mat m,
  int row,
  int col,
  int val,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int32)>()
external ffi.Pointer<CvStatus> Mat_SetInt3(
  Mat m,
  int x,
  int y,
  int z,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int8)>()
external ffi.Pointer<CvStatus> Mat_SetSChar(
  Mat m,
  int row,
  int col,
  int val,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int8)>()
external ffi.Pointer<CvStatus> Mat_SetSChar3(
  Mat m,
  int x,
  int y,
  int z,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int16)>()
external ffi.Pointer<CvStatus> Mat_SetShort(
  Mat m,
  int row,
  int col,
  int val,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int16)>()
external ffi.Pointer<CvStatus> Mat_SetShort3(
  Mat m,
  int x,
  int y,
  int z,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Scalar, Mat)>()
external ffi.Pointer<CvStatus> Mat_SetTo(
  Mat m,
  Scalar value,
  Mat mask,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Uint8)>()
external ffi.Pointer<CvStatus> Mat_SetUChar(
  Mat m,
  int row,
  int col,
  int val,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Uint8)>()
external ffi.Pointer<CvStatus> Mat_SetUChar3(
  Mat m,
  int x,
  int y,
  int z,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Uint16)>()
external ffi.Pointer<CvStatus> Mat_SetUShort(
  Mat m,
  int row,
  int col,
  int val,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Uint16)>()
external ffi.Pointer<CvStatus> Mat_SetUShort3(
  Mat m,
  int x,
  int y,
  int z,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec2b)>()
external ffi.Pointer<CvStatus> Mat_SetVec2b(
  Mat m,
  int row,
  int col,
  Vec2b val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec2d)>()
external ffi.Pointer<CvStatus> Mat_SetVec2d(
  Mat m,
  int row,
  int col,
  Vec2d val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec2f)>()
external ffi.Pointer<CvStatus> Mat_SetVec2f(
  Mat m,
  int row,
  int col,
  Vec2f val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec2i)>()
external ffi.Pointer<CvStatus> Mat_SetVec2i(
  Mat m,
  int row,
  int col,
  Vec2i val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec2s)>()
external ffi.Pointer<CvStatus> Mat_SetVec2s(
  Mat m,
  int row,
  int col,
  Vec2s val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec2w)>()
external ffi.Pointer<CvStatus> Mat_SetVec2w(
  Mat m,
  int row,
  int col,
  Vec2w val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec3b)>()
external ffi.Pointer<CvStatus> Mat_SetVec3b(
  Mat m,
  int row,
  int col,
  Vec3b val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec3d)>()
external ffi.Pointer<CvStatus> Mat_SetVec3d(
  Mat m,
  int row,
  int col,
  Vec3d val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec3f)>()
external ffi.Pointer<CvStatus> Mat_SetVec3f(
  Mat m,
  int row,
  int col,
  Vec3f val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec3i)>()
external ffi.Pointer<CvStatus> Mat_SetVec3i(
  Mat m,
  int row,
  int col,
  Vec3i val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec3s)>()
external ffi.Pointer<CvStatus> Mat_SetVec3s(
  Mat m,
  int row,
  int col,
  Vec3s val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec3w)>()
external ffi.Pointer<CvStatus> Mat_SetVec3w(
  Mat m,
  int row,
  int col,
  Vec3w val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec4b)>()
external ffi.Pointer<CvStatus> Mat_SetVec4b(
  Mat m,
  int row,
  int col,
  Vec4b val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec4d)>()
external ffi.Pointer<CvStatus> Mat_SetVec4d(
  Mat m,
  int row,
  int col,
  Vec4d val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec4f)>()
external ffi.Pointer<CvStatus> Mat_SetVec4f(
  Mat m,
  int row,
  int col,
  Vec4f val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec4i)>()
external ffi.Pointer<CvStatus> Mat_SetVec4i(
  Mat m,
  int row,
  int col,
  Vec4i val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec4s)>()
external ffi.Pointer<CvStatus> Mat_SetVec4s(
  Mat m,
  int row,
  int col,
  Vec4s val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec4w)>()
external ffi.Pointer<CvStatus> Mat_SetVec4w(
  Mat m,
  int row,
  int col,
  Vec4w val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Vec6d)>()
external ffi.Pointer<CvStatus> Mat_SetVec6d(
  Mat m,
  int row,
  int col,
  Vec6d val,
);
